# MetaLogic

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  electron.vite.config.ts  eslint.config.js  forge.config.ts  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/gates/: basic.rs  gate.rs  mod.rs  state.rs
rust/src/simulation/: engine.rs  event_queue.rs  mod.rs
src/main/: index.ts
src/main/file/: cdl-parser.ts  mlc-serializer.ts
src/main/ipc/: handlers.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html
src/renderer/components/canvas/: CircuitCanvas.tsx
src/renderer/components/edges/: LabelLinkEdge.tsx  WireEdge.tsx
src/renderer/components/icons/: GateSymbols.tsx
src/renderer/components/nodes/: BaseGateNode.tsx  LabelConnectorNode.tsx  handleLabels.ts
src/renderer/components/panels/: GatePalette.tsx  MemoryEditorModal.tsx  PropertiesPanel.tsx  SimulationControls.tsx
src/renderer/components/ui/: ToastContainer.tsx
src/renderer/simulation/core/: EventQueue.ts  LabelConnectorResolver.ts  SimulationEngine.ts  WireResolver.ts
src/renderer/stores/: circuitStore.ts  historyStore.ts  memoryEditorStore.ts  simulationStore.ts  toastStore.ts
src/renderer/styles/: globals.css
src/renderer/workers/: simulation.worker.ts
src/shared/types/: circuit.ts  index.ts
tests/simulation/: eventQueue.test.ts  gates.test.ts  sequentialGates.test.ts  simulationEngine.test.ts  wireResolver.test.ts
(+6 files in other folders)
