[package]
name = "metalogic-core"
version = "1.0.0"
edition = "2021"
description = "WASM simulation core for MetaLogic"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
